프로젝트 버전 0.5.0 릴리즈   * 빌드, 패킹, 배포 파일 생성 완료   * 설치, 테스트 완료